# motley

./: Cargo.toml  NOTICE  README.md
examples/: http.rs  rest.rs  rest2.rs
parked/rest/: create.rs  delete.rs  list.rs  mock.rs  mod.rs  show.rs  types.rs  update.rs
src/: doc.rs  entity.rs  lib.rs
src/data_source/: mock.rs  mod.rs
src/data_store/: error.rs  generator.rs  mod.rs  table.rs
src/data_store/mock/: database.rs  generator.rs  mod.rs  table.rs
src/http/: http.rs  mock.rs  mod.rs  mux.rs  request.rs  resource.rs  response.rs
src/http/rest/: mock.rs  mod.rs
src/transport/http/rest/: mock.rs  mod.rs
